--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,11 @@
 			<artifactId>aws-java-sdk</artifactId>
 			<version>1.11.649</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.bytedeco</groupId>
+			<artifactId>javacv</artifactId>
+			<version>1.0</version>
+		</dependency>
 
 	</dependencies>
 
